// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeField should render a loading state 1`] = `
<EuiForm>
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="Select a primary time field for use with the global time filter."
        id="indexPatternManagement.createIndexPattern.stepTime.timeDescription"
        values={Object {}}
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Time field"
        id="indexPatternManagement.createIndexPattern.stepTime.fieldLabel"
        values={Object {}}
      />
    }
    labelAppend={
      <EuiLoadingSpinner
        size="s"
      />
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={true}
      name="timeField"
      options={
        Array [
          Object {
            "text": "Loading…",
            "value": "",
          },
        ]
      }
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render a selected time field 1`] = `
<EuiForm>
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="Select a primary time field for use with the global time filter."
        id="indexPatternManagement.createIndexPattern.stepTime.timeDescription"
        values={Object {}}
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Time field"
        id="indexPatternManagement.createIndexPattern.stepTime.fieldLabel"
        values={Object {}}
      />
    }
    labelAppend={
      <EuiText
        size="xs"
      >
        <EuiLink
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Refresh"
            id="indexPatternManagement.createIndexPattern.stepTime.refreshButton"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={false}
      isLoading={false}
      name="timeField"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "@timestamp",
            "value": "@timestamp",
          },
        ]
      }
      value="@timestamp"
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render normally 1`] = `
<EuiForm>
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="Select a primary time field for use with the global time filter."
        id="indexPatternManagement.createIndexPattern.stepTime.timeDescription"
        values={Object {}}
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Time field"
        id="indexPatternManagement.createIndexPattern.stepTime.fieldLabel"
        values={Object {}}
      />
    }
    labelAppend={
      <EuiText
        size="xs"
      >
        <EuiLink
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Refresh"
            id="indexPatternManagement.createIndexPattern.stepTime.refreshButton"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={false}
      isLoading={false}
      name="timeField"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "@timestamp",
            "value": "@timestamp",
          },
        ]
      }
      value=""
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render something if hiding time field 1`] = `
<EuiForm>
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="The indices which match this index pattern don't contain any time fields."
        id="indexPatternManagement.createIndexPattern.stepTime.field.noTimeFieldsLabel"
        values={Object {}}
      />
    </p>
  </EuiText>
</EuiForm>
`;
